Fix card wrapping on small screens
Made card min width smaller to prevent cards wrapping in
columns to quickly.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -71,7 +71,7 @@ a {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  flex: 1 1 520px;
+  flex: 1 1 240px;
   margin: 16px;
   padding: 16px;
 }
